# agent-panel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: AI_DEVELOPMENT.md  DEPLOYMENT.md
prompts/: code-review-ai.md  phase-align.md  phase-deploy.md  phase-design.md  phase-dev.md  phase-done.md  phase-selftest.md  phase-testing.md
public/: app.js  config.js  env-vars.js  harness-switch.js  notifications.js  req-detail.js  requirements-board.js  style.css  terminal.js
scripts/: agent-panel.service  install-systemd.sh  opencode-dashboard.service  uninstall-systemd.sh
src/: autoExtract.ts  autoExtractScheduler.ts  autoValuation.ts  branchScope.ts  branchScopeExtract.ts  codeHighlight.ts  codeReview.ts  codeReviewJob.ts  config.ts  dashboardSessions.ts  dashboardStats.ts  effortEstimation.ts  experienceMarkers.ts  extractHistory.ts  extractJobs.ts  forkSalvage.ts  fullSyncScheduler.ts  gitAiHealth.ts  gitAiSuspects.ts  impactAssessment.ts  main.rs  navigation.ts  notifications.ts  opencodeProcessQueue.ts  parser.ts  paths.ts  piConfig.ts  piSessions.ts  proxy.ts  releaseChecklist.ts  requirementAlignment.ts  requirementAttachments.ts  requirementAutoDrive.ts  requirementBoard.ts  requirementState.ts  requirements.ts  scanner.ts  schedulerLock.ts  server.tsx  sessionExtract.ts  (+7 more)
systemd/: agent-panel-backend@.service  agent-panel-proxy.service
tests/: autoExtract.test.ts  autoExtractScheduler.test.ts  autoValuation.test.ts  branchScope.test.ts  codeHighlight.test.ts  codeReview.test.ts  config.test.ts  (+28 more)
(+44 files in other folders)
